# ltsmin

./: .classpath  .cproject  .gitignore  .gitmodules  .project  .travis.yml  AUTHORS  CITATION  CMakeLists.txt  CNAME  CODING-STANDARDS  COPYING  Conversion-to-cmake.txt  Doxyfile  Makefile  Makefile.am  NEWS  README  README.md  RELEASE-CHECKLIST  REMOVEWHENDONE.c  _config.yml  aio_kernel.c  aio_kernel.h  ar2bcg.c  ar2gsf.c  arch_object.h  archive.c  archive.h  archive_dir.c  archive_format.c  archive_gcf.c  archive_gsf.c  bcg2gsf.c  changelog.html  changelog.md  config.h  configure.ac  data_io.c  data_io.h  (+72 more)
doc/: .gitignore  Makefile  Makefile.am  asciidoc.conf  callouts.xsl  ce-mpi.txt  dve-reach.txt  dve2-reach.txt  dve22lts-grey.txt  dve22lts-gsea.txt  dve22lts-hre.txt  dve22lts-mc.txt  dve22lts-mpi.txt  dve22torx.txt  dve2lts-dist.txt  dve2lts-grey.txt  dve2lts-gsea.txt  dve2lts-hre.txt  dve2lts-mc.txt  dve2lts-mpi.txt  dve2lts-seq.txt  dve2lts-sym.txt  dve2torx.txt  etf-convert.txt  etf-reach.txt  etf.txt  etf2lts-dist.txt  etf2lts-grey.txt  etf2lts-gsea.txt  etf2lts-hre.txt  etf2lts-mc.txt  etf2lts-mpi.txt  etf2lts-seq.txt  etf2lts-sym.txt  etf2torx.txt  gcf.txt  instantiator-mpi.txt  lpo-reach.txt  lpo2lts-dist.txt  lpo2lts-grey.txt  (+92 more)
doc/code/: regroup.hs
doc/inc/: buchi.txt  buddy-options.txt  compression.txt  devel-options.txt  dve.txt  dve2.txt  env-vars.txt  file-formats.txt  general-options.txt  hre-options.txt  hre-startup.txt  io-options.txt  lace-options.txt  lddmc-options.txt  listdd-options.txt  listdd64-options.txt  lts-io-options.txt  ltsmin-printtrace-options.txt  ltsmin-tracepp-options.txt  mcrl-options.txt  mcrl2-options.txt  mpi-blurb.txt  mpi-example.txt  pbes-options.txt  pins-options.txt  pins2lts-dist-options.txt  pins2lts-dist.txt  pins2lts-mc-options.txt  pins2lts-mc-ta-options.txt  pins2lts-mc.txt  pins2lts-seq-options.txt  pins2lts-seq.txt  pins2lts-sym-options.txt  pins2lts-sym.txt  pins2torx.txt  plugin-options.txt  pnml-options.txt  pnml.txt  prob-options.txt  prob.txt  (+27 more)
examples/: .gitignore  Makefile.am  MutexSimple.mch  Philosophers-5.pnml  TimingWithoutTimeout9OnTheFlynessShallow.promela  anderson.1.prop4.dve  brp-nodeadlock.pbes  brp.lps  brp.mcrl  elevator.3-false.inv  elevator.3.dve  elevator.3.inv  elevator.3.ltl  fgs.promela  fgs.promela.spinja  fischer4.xml  gear.1.dve  gear.1.etf  hef_wrong.tbf  i4  i4.spinja  ieee-11073.lps  iprotocol.2.dve  iprotocol.2.ltl  iprotocol.2.prop4.dve  onebit.lps  onebit.mcrl2  p117.pml  p117.pml.spinja  p312.pml  p312.pml.spinja  pbes_formula  peterson3.pml  peterson4.pml  peterson4.pml.spinja  salesman.mapa  zune.ltl  zune.pml  zune.pml.spinja
lib/: CMakeLists.txt  Makefile.am  qsort.c  qsort_r.c  random_r.c  strsep.c  sys_times.in.h  times.c
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  ar2gsf.c  arch_object.h  archive.c  archive.h  archive_dir.c  archive_format.c  archive_gcf.c  archive_gsf.c  archive_io_ops.c  at-map.c  at-map.h  atomics.h  balloc.c  balloc.h  bcg2gcf.c  bcg2gsf.c  bcg_io_ops.c  bignum.c  bignum.h  bitset.c  bitset.h  bitvector-ll.c  bitvector-ll.h  cctables.c  cctables.h  chunk-table.h  chunk_support.c  chunk_support.h  chunk_table_factory.c  clt_table.c  clt_table.h  color.c  color.h  config.h  config.h.in  dbs-ll.c  (+239 more)
src/andl-lib/: .gitignore  CMakeLists.txt  Makefile.am  andl-lexer.l  andl-parser.y
src/bignum/: CMakeLists.txt  Makefile.am  bignum-gmp.c  bignum-ll.c  bignum-tommath.c  bignum.h
src/ce/: .gitignore  CMakeLists.txt  Ddlts.c  Ddlts.h  Dtaudlts.c  Dtaudlts.h  Makefile.am  README  aut-io.c  aut-io.h  bufs.c  bufs.h  ce-colors.c  ce-mpi.c  ce.c  config.h  data_io.c  data_io.h  dirops.c  dirops.h  dlts.c  dlts.h  groups.c  groups.h  info.c  label.c  label.h  lts.c  lts.h  messages.c  messages.h  mpi-runtime.c  options.c  options.h  paint.c  paint.h  seglts.c  seglts.h  set.c  sortcount.c  (+3 more)
src/dm/: CMakeLists.txt  Makefile.am  bitvector.c  bitvector.h  dm.c  dm.h  dm_boost.cpp  dm_boost.h  dm_viennacl.cpp  dm_viennacl.h  regroup.c  sloan_ordering.hpp  test.c
src/etf-convert/: Makefile.am  etf-convert.c
src/gcf-tool/: Makefile.am  gcf-tool.c
src/hre/: CMakeLists.txt  Makefile.am  config.h.in  context.h  dir_ops.h  feedback.h  hre.doc  hre_context.c  hre_dir_ops.c  hre_feedback.c  hre_main.c  hre_malloc.c  hre_messaging.c  hre_popt.c  hre_pthread.c  hre_queue.c  hre_reduce.c  hre_runtime.c  hre_table.c  hre_timer.c  hre_unix.c  hre_utils.c  internal.h  provider.h  qsortex.c  queue.h  runtime.h  stringindex.c  stringindex.h  table.h  unix.h  user.h
src/hre-io/: CMakeLists.txt  Makefile.am  arch_object.h  archive.h  client-server.h  fifo.h  gcf_common.h  hre_archive.c  hre_archive_dir.c  hre_client_server.c  hre_fifo.c  hre_gcf_common.c  hre_gcf_read.c  hre_gcf_write.c  hre_gzstream.c  hre_raf.c  hre_stream.c  hre_stream_buffer.c  hre_stream_diff32.c  hre_stream_fd.c  hre_stream_mem.c  hre_stream_rle32.c  hre_struct_io.c  hre_zip_io.c  raf.h  raf_object.h  stream.h  stream_object.h  struct_io.h  types.h  user.h
src/hre-mpi/: Makefile.am  hre_mpi.c  mpi_event_loop.c  mpi_event_loop.h  user.h
src/hre-test/: Makefile.am  test-hre.c
src/ldd2bdd/: .gitignore  Makefile.am  ldd2bdd.c
src/lts-io/: CMakeLists.txt  Makefile.am  aut_io.c  bcg_io.c  file-base.c  filter_write.c  fsm_write.c  internal.h  lts-io.doc  lts-type-io.c  lts_file_misc.c  provider.h  user.h  vector_read.c  vector_write.c
src/lts-lib/: Makefile.am  bfs_reorder.c  determinize.c  dir-info.c  dir-info.h  find-states.c  lowmem.h  lowmem_b.c  lowmem_lump.c  lowmem_s.c  lts-imca-io.c  lts-io.c  lts-lib.doc  lts-pg-io.c  lts-pg-io.h  lts-quant-io.c  lts-tra-io.c  lts.c  lts.h  lts_access.c  lts_print.c  lts_uniq.c  rationals.c  rationals.h  set.c  setbased_weak.c  sigmin-lib.c  silent_compress.c
src/lts-tracepp/: Makefile.am  lts-tracepp.c
src/ltscmp-one/: Makefile.am  ltscmp-one.c
src/ltsmin-compare/: Makefile.am  ltsmin-compare.c
src/ltsmin-convert/: Makefile.am  ltsmin-convert.c
src/mc-lib/: color.c  (+40 more)
testsuite/: .gitignore  Makefile.am  TODO  ltsmin.exp  site.exp  wine.exp.in
(+597 files in other folders)
